# zctw

./: .bumpversion.cfg  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  OPTIMIZATION_FINDINGS.md  README.md  SPEC.md  benchmark_all.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi-publish.yml
scripts/: build_cython.py
src/ctwpy/: __init__.py  __main__.py  _compressor.py  _tables.py  ctwmath.py  ctwproc.py  ctwtree.py  header.py  larc.py  settings.py
src/zctw/: __init__.py  __main__.py  _compressor.py  _cython_ctw.c  _cython_ctw.py  _cython_ctw.pyx  _tables.py  _tree_fast.py  ctwmath.py  ctwproc.py  ctwtree.py  header.py  larc.py
tests/: __init__.py  conftest.py  test_compressor.py  test_settings.py
