[build-system]
requires = ["hatchling", "Cython>=0.29"]
build-backend = "hatchling.build"

[project]
name = "zctw"
version = "0.1.0"
description = "Python implementation of Context Tree Weighting (CTW) lossless compression"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["zctw[dev,test,lint]"]

[project.scripts]
zctw = "zctw.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/zctw"
Repository = "https://github.com/daedalus/zctw"
Issues = "https://github.com/daedalus/zctw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zctw"]

[tool.hatch.build.targets.sdist]
include = ["src/zctw"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "ANN204", "ANN201", "ANN001", "N802"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["union-attr", "index", "arg-type", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]